# repro_prettier

./: .bazelignore  .gitignore  .npmrc  .prettierignore  BUILD.bazel  MODULE.bazel  WORKSPACE  package.json  pnpm-lock.yaml  prettier.config.cjs
